--- a/_data/tag/dipole.yml
+++ b/_data/tag/dipole.yml
@@ -1,5 +1,14 @@
+- name:  Compute forward simulated data using ft_dipolesimulation
+  link:  /example/compute_forward_simulated_data
+
+- name:  Compute forward simulated data and apply a beamformer scan
+  link:  /example/compute_forward_simulated_data_and_apply_a_beamformer_scan
+
 - name:  Compute forward simulated data and apply a dipole fit
   link:  /example/compute_forward_simulated_data_and_apply_a_dipole_fit
+
+- name:  Compute forward simulated data with the low-level ft_compute_leadfield
+  link:  /example/compute_leadfield
 
 - name:  Fit a dipole to the tactile ERF after mechanical stimulation
   link:  /example/fit_a_dipole_to_the_tactile_erf_after_mechanical_stimulation
