--- a/_data/tag/eeg.yml
+++ b/_data/tag/eeg.yml
@@ -13,8 +13,14 @@
 - name:  Combined EEG and MEG source reconstruction
   link:  /example/combined_eeg_and_meg_source_reconstruction
 
+- name:  Compute forward simulated data using ft_dipolesimulation
+  link:  /example/compute_forward_simulated_data
+
 - name:  Compute forward simulated data and apply a dipole fit
   link:  /example/compute_forward_simulated_data_and_apply_a_dipole_fit
+
+- name:  Compute forward simulated data with the low-level ft_compute_leadfield
+  link:  /example/compute_leadfield
 
 - name:  Analysis of high-gamma band signals in human ECoG
   link:  /example/ecog_ny
