--- a/_data/tag/faq.yml
+++ b/_data/tag/faq.yml
@@ -217,6 +217,9 @@
 - name:  What kind of cable do I need for a serial port connection between two computers?
   link:  /faq/how_can_i_test_the_serial_port_connection_between_two_computers
 
+- name:  How can I test whether a behavioral measure is phasic?
+  link:  /faq/how_can_i_test_whether_a_behavioral_measure_is_phasic
+
 - name:  How can I transform trigger values from bits to decimal representation with a trialfun?
   link:  /faq/how_can_i_transform_trigger_values_from_bits_to_decimal_representation_with_a_trialfun
 
