--- a/_data/tag/mri.yml
+++ b/_data/tag/mri.yml
@@ -58,6 +58,9 @@
 - name:  Localizing oscillatory sources using beamformer techniques
   link:  /tutorial/beamformer
 
+- name:  Virtual channel analysis of epilepsy MEG data
+  link:  /tutorial/epilepsy
+
 - name:  Creating a BEM volume conduction model of the head for source-reconstruction of EEG data
   link:  /tutorial/headmodel_eeg_bem
 
