--- a/_data/tag/example.yml
+++ b/_data/tag/example.yml
@@ -178,6 +178,9 @@
 - name:  Plotting the result of source reconstructing on a cortical mesh
   link:  /example/plotting_the_result_of_source_reconstructing_on_a_cortical_mesh
 
+- name:  Re-reference EEG and iEEG data
+  link:  /example/rereference
+
 - name:  Source statistics
   link:  /example/source_statistics
 
