--- a/_data/tag/volume.yml
+++ b/_data/tag/volume.yml
@@ -7,3 +7,6 @@
 - name:  My MRI is upside down, is this a problem?
   link:  /faq/my_mri_is_upside_down_is_this_a_problem
 
+- name:  How can I use Seg3D to check and modify segmentation results?
+  link:  /getting_started/seg3d
+
