--- a/_data/tag/eeg.yml
+++ b/_data/tag/eeg.yml
@@ -115,6 +115,9 @@
 - name:  Getting started with Nicolet data
   link:  /getting_started/nicolet
 
+- name:  How can I use Seg3D to check and modify segmentation results?
+  link:  /getting_started/seg3d
+
 - name:  Importing your data
   link:  /reading_data
 
