--- a/_data/tag/headmodel.yml
+++ b/_data/tag/headmodel.yml
@@ -61,6 +61,9 @@
 - name:  Where can I find the dipoli command-line executable?
   link:  /faq/where_can_i_find_the_dipoli_command-line_executable
 
+- name:  How can I use Seg3D to check and modify segmentation results?
+  link:  /getting_started/seg3d
+
 - name:  Reference documentation
   link:  /reference
 
