--- a/_data/tag/example.yml
+++ b/_data/tag/example.yml
@@ -160,6 +160,9 @@
 - name:  Interpolating data from the CTF151 to the CTF275 sensor array using megrealign
   link:  /example/megrealign
 
+- name:  Defining electrodes as neighbours for cluster-level statistics
+  link:  /example/neighbours
+
 - name:  Analyzing NIRS data recorded during unilateral finger- and foot-tapping
   link:  /example/nirs_fingertapping
 
