--- a/_data/tag/ct.yml
+++ b/_data/tag/ct.yml
@@ -127,7 +127,7 @@
 - name:  Getting started with CTF data
   link:  /getting_started/ctf
 
-- name:  Introduction - dealing with artifacts
+- name:  Introduction on dealing with artifacts
   link:  /tutorial/artifacts
 
 - name:  Automatic artifact rejection
