--- a/_data/tag/meg.yml
+++ b/_data/tag/meg.yml
@@ -94,7 +94,7 @@
 - name:  References to implemented methods
   link:  /references_to_implemented_methods
 
-- name:  Introduction - dealing with artifacts
+- name:  Introduction on dealing with artifacts
   link:  /tutorial/artifacts
 
 - name:  Automatic artifact rejection
