--- a/_data/tag/tutorial.yml
+++ b/_data/tag/tutorial.yml
@@ -7,7 +7,7 @@
 - name:  Overview of all tutorials
   link:  /tutorial
 
-- name:  Introduction - dealing with artifacts
+- name:  Introduction on dealing with artifacts
   link:  /tutorial/artifacts
 
 - name:  Automatic artifact rejection
