--- a/_data/tag/example.yml
+++ b/_data/tag/example.yml
@@ -184,6 +184,9 @@
 - name:  Re-reference EEG and iEEG data
   link:  /example/rereference
 
+- name:  Use simulations to estimate the sample size for cluster-based permutation test
+  link:  /example/sample_size
+
 - name:  Source statistics
   link:  /example/source_statistics
 
