--- a/_data/tag/statistics.yml
+++ b/_data/tag/statistics.yml
@@ -13,6 +13,9 @@
 - name:  Using GLM to analyze NIRS timeseries data
   link:  /example/nirs_glm
 
+- name:  Use simulations to estimate the sample size for cluster-based permutation test
+  link:  /example/sample_size
+
 - name:  Source statistics
   link:  /example/source_statistics
 
