--- a/_data/tag/statistics.yml
+++ b/_data/tag/statistics.yml
@@ -14,7 +14,7 @@
   link:  /example/nirs_glm
 
 - name:  Use simulations to estimate the sample size for cluster-based permutation test
-  link:  /example/sample_size
+  link:  /example/samplesize
 
 - name:  Source statistics
   link:  /example/source_statistics
