--- a/_data/tag/tmsi.yml
+++ b/_data/tag/tmsi.yml
@@ -1,3 +1,6 @@
 - name:  TMSI EEG amplifiers
   link:  /development/realtime/tmsi
 
+- name:  Getting started with TMSi data
+  link:  /getting_started/tmsi
+
