--- a/_data/tag/video.yml
+++ b/_data/tag/video.yml
@@ -13,6 +13,9 @@
 - name:  Are the FieldTrip lectures available on video?
   link:  /faq/video
 
+- name:  Getting started with video data
+  link:  /getting_started/video
+
 - name:  Video lectures and tutorials
   link:  /video
 
