--- a/_data/tag/fmri.yml
+++ b/_data/tag/fmri.yml
@@ -1,3 +1,9 @@
 - name:  Realtime fMRI from Siemens scanners
   link:  /development/realtime/fmri
 
+- name:  Correlation analysis in fMRI data
+  link:  /example/correlation_analysis_in_fmri_data
+
+- name:  Getting started with fMRI timeseries data
+  link:  /getting_started/fmri
+
