--- a/_data/tag/mri.yml
+++ b/_data/tag/mri.yml
@@ -55,6 +55,9 @@
 - name:  Why is the source model deformed or incorrectly aligned after warping template?
   link:  /faq/why_is_the_source_model_deformed_or_incorrectly_aligned_after_warping_template
 
+- name:  Getting started with fMRI timeseries data
+  link:  /getting_started/fmri
+
 - name:  Localizing oscillatory sources using beamformer techniques
   link:  /tutorial/beamformer
 
