--- a/_data/tag/tms.yml
+++ b/_data/tag/tms.yml
@@ -4,6 +4,9 @@
 - name:  Which datasets are used in the documentation and where are they used?
   link:  /faq/what_types_of_datasets_and_their_respective_analyses_are_used_on_fieldtrip
 
+- name:  Getting started with TMSi data
+  link:  /getting_started/tmsi
+
 - name:  Dealing with TMS-EEG datasets
   link:  /tutorial/tms-eeg
 
