--- a/_data/tag/cluster.yml
+++ b/_data/tag/cluster.yml
@@ -7,7 +7,7 @@
 - name:  Defining electrodes as neighbours for cluster-level statistics
   link:  /example/neighbours
 
-- name:  Use simulations to estimate the sample size for cluster-based permutation test
+- name:  Using simulations to estimate the sample size for cluster-based permutation test
   link:  /example/samplesize
 
 - name:  Use simulated ERPs to explore cluster statistics
