--- a/_data/tag/example.yml
+++ b/_data/tag/example.yml
@@ -187,7 +187,7 @@
 - name:  Re-reference EEG and iEEG data
   link:  /example/rereference
 
-- name:  Use simulations to estimate the sample size for cluster-based permutation test
+- name:  Using simulations to estimate the sample size for cluster-based permutation test
   link:  /example/samplesize
 
 - name:  Source statistics
@@ -201,6 +201,9 @@
 
 - name:  Testing BEM created EEG lead fields
   link:  /example/testing_bem_created_leadfields
+
+- name:  Using threshold-free cluster enhancement for cluster statistics
+  link:  /example/threshold_free_cluster_enhancement
 
 - name:  Use denoising source separation (DSS) to remove ECG artifacts
   link:  /example/use_denoising_source_separation_dss_to_remove_ecg_artifacts
