--- a/_data/tag/simulation.yml
+++ b/_data/tag/simulation.yml
@@ -7,7 +7,7 @@
 - name:  Effects of tapering for power estimates
   link:  /example/effects_of_tapering_for_power_estimates_in_the_frequency_domain
 
-- name:  Use simulations to estimate the sample size for cluster-based permutation test
+- name:  Using simulations to estimate the sample size for cluster-based permutation test
   link:  /example/samplesize
 
 - name:  Testing BEM created EEG lead fields
