--- a/_data/tag/statistics.yml
+++ b/_data/tag/statistics.yml
@@ -13,7 +13,7 @@
 - name:  Using GLM to analyze NIRS timeseries data
   link:  /example/nirs_glm
 
-- name:  Use simulations to estimate the sample size for cluster-based permutation test
+- name:  Using simulations to estimate the sample size for cluster-based permutation test
   link:  /example/samplesize
 
 - name:  Source statistics
@@ -21,6 +21,9 @@
 
 - name:  Stratify the distribution of one variable that differs in two conditions
   link:  /example/stratify
+
+- name:  Using threshold-free cluster enhancement for cluster statistics
+  link:  /example/threshold_free_cluster_enhancement
 
 - name:  Use simulated ERPs to explore cluster statistics
   link:  /example/use_simulated_erps_to_explore_cluster_statistics
