--- a/_data/tag/eeg.yml
+++ b/_data/tag/eeg.yml
@@ -1,6 +1,3 @@
-- name:  Example script for leadfield based on FEM headmodel
-  link:  /development/project/example_fem
-
 - name:  Modular EEG, OpenEEG
   link:  /development/realtime/modulareeg
 
@@ -24,6 +21,9 @@
 
 - name:  Analysis of high-gamma band signals in human ECoG
   link:  /example/ecog_ny
+
+- name:  Compute EEG leadfields using a FEM headmodel
+  link:  /example/fem
 
 - name:  Getting started with reading raw EEG or MEG data
   link:  /example/getting_started_with_reading_raw_eeg_or_meg_data
