--- a/_data/tag/example.yml
+++ b/_data/tag/example.yml
@@ -1,6 +1,3 @@
-- name:  Example script for leadfield based on FEM headmodel
-  link:  /development/project/example_fem
-
 - name:  Example MATLAB scripts
   link:  /example
 
@@ -108,6 +105,9 @@
 
 - name:  Performing modified Multiscale Entropy (mMSE) analysis on EEG/MEG/LFP data
   link:  /example/entropy_analysis
+
+- name:  Compute EEG leadfields using a FEM headmodel
+  link:  /example/fem
 
 - name:  Fit a dipole to the tactile ERF after mechanical stimulation
   link:  /example/fit_a_dipole_to_the_tactile_erf_after_mechanical_stimulation
