--- a/_data/tag/example.yml
+++ b/_data/tag/example.yml
@@ -4,8 +4,8 @@
 - name:  Align EEG electrode positions to BEM headmodel
   link:  /example/align_eeg_electrode_positions_to_bem_headmodel
 
-- name:  Apply clusterrandanalysis on TFRs of power that were computed with BESA
-  link:  /example/apply_clusterrandanalysis_on_tfrs_of_power_that_were_computed_with_besa
+- name:  Apply non-parametric statistics with clustering on TFRs of power that were computed with BESA
+  link:  /example/apply_cluster_and_analysis_on_tfrs_of_power_that_were_computed_with_besa
 
 - name:  Converting an example audio dataset for sharing in BIDS
   link:  /example/bids_audio
