--- a/_data/tag/freq.yml
+++ b/_data/tag/freq.yml
@@ -1,5 +1,5 @@
-- name:  Apply clusterrandanalysis on TFRs of power that were computed with BESA
-  link:  /example/apply_clusterrandanalysis_on_tfrs_of_power_that_were_computed_with_besa
+- name:  Apply non-parametric statistics with clustering on TFRs of power that were computed with BESA
+  link:  /example/apply_cluster_and_analysis_on_tfrs_of_power_that_were_computed_with_besa
 
 - name:  Effect of SNR on Coherence
   link:  /example/coherence_snr
