--- a/_data/tag/faq.yml
+++ b/_data/tag/faq.yml
@@ -376,6 +376,9 @@
 - name:  MATLAB complains about a missing or invalid mex file, what should I do?
   link:  /faq/matlab_complains_about_a_missing_or_invalid_mex_file_what_should_i_do
 
+- name:  MATLAB does not see the functions in the "private" directory
+  link:  /faq/matlab_does_not_see_the_functions_in_the_private_directory
+
 - name:  Replacements for functions from MathWorks toolboxes
   link:  /faq/matlab_replacements
 
