--- a/_data/tag/function.yml
+++ b/_data/tag/function.yml
@@ -1,3 +1,6 @@
+- name:  MATLAB does not see the functions in the "private" directory
+  link:  /faq/matlab_does_not_see_the_functions_in_the_private_directory
+
 - name:  What does a typical call to a FieldTrip function look like?
   link:  /faq/what_does_a_typical_call_to_a_fieldtrip_function_look_like
 
