--- a/_data/tag/matlab.yml
+++ b/_data/tag/matlab.yml
@@ -22,6 +22,9 @@
 - name:  MATLAB complains about a missing or invalid mex file, what should I do?
   link:  /faq/matlab_complains_about_a_missing_or_invalid_mex_file_what_should_i_do
 
+- name:  MATLAB does not see the functions in the "private" directory
+  link:  /faq/matlab_does_not_see_the_functions_in_the_private_directory
+
 - name:  Replacements for functions from MathWorks toolboxes
   link:  /faq/matlab_replacements
 
@@ -45,6 +48,9 @@
 
 - name:  Where can I find the dipoli command-line executable?
   link:  /faq/where_can_i_find_the_dipoli_command-line_executable
+
+- name:  Why are so many of the interesting functions in the private directories?
+  link:  /faq/why_are_so_many_of_the_interesting_functions_in_the_private_directories
 
 - name:  Why are the fileio functions stateless, does the fseek not make them very slow?
   link:  /faq/why_are_the_fileio_functions_stateless_does_the_fseek_not_make_them_very_slow
