--- a/_data/tag/atlas.yml
+++ b/_data/tag/atlas.yml
@@ -1,3 +1,6 @@
 - name:  How can I map source locations onto an anatomical label in an atlas?
   link:  /faq/how_can_i_map_source_locations_between_two_different_representations
 
+- name:  Template anatomical atlases and parcellation schemes
+  link:  /template/atlas
+
