--- a/_data/tag/electrode.yml
+++ b/_data/tag/electrode.yml
@@ -16,6 +16,9 @@
 - name:  Should I use a Polhemus or a Structure Sensor to record electrode positions?
   link:  /faq/structuresensor
 
+- name:  Template 3-D electrode sets
+  link:  /template/electrode
+
 - name:  Localizing electrodes using a 3D-scanner
   link:  /tutorial/electrode
 
