--- a/_data/tag/statistics.yml
+++ b/_data/tag/statistics.yml
@@ -61,7 +61,7 @@
 - name:  Why should I use the cfg.correcttail option when using statistics_montecarlo?
   link:  /faq/why_should_i_use_the_cfg.correcttail_option_when_using_statistics_montecarlo
 
-- name:  Getting started with LIMO EEG
+- name:  Getting started with LIMO MEEG
   link:  /getting_started/limo
 
 - name:  Reference documentation
