--- a/_data/tag/eeg.yml
+++ b/_data/tag/eeg.yml
@@ -112,7 +112,7 @@
 - name:  Human ECoG
   link:  /getting_started/human_ecog
 
-- name:  Getting started with LIMO EEG
+- name:  Getting started with LIMO MEEG
   link:  /getting_started/limo
 
 - name:  Getting started with Nicolet data
