--- a/_data/tag/meg.yml
+++ b/_data/tag/meg.yml
@@ -76,6 +76,9 @@
 - name:  Getting started with CTF data
   link:  /getting_started/ctf
 
+- name:  Getting started with LIMO MEEG
+  link:  /getting_started/limo
+
 - name:  Getting started with Neuromag/Elekta/Megin data
   link:  /getting_started/neuromag
 
