--- a/_data/tag/coordinate.yml
+++ b/_data/tag/coordinate.yml
@@ -1,11 +1,11 @@
 - name:  What is the difference between the ACPC, MNI, SPM and TAL coordinate systems?
   link:  /faq/acpc
 
+- name:  How are the different head and MRI coordinate systems defined?
+  link:  /faq/coordsys
+
 - name:  How do homogenous coordinate transformation matrices work?
   link:  /faq/homogenous
-
-- name:  How are the different head and MRI coordinate systems defined?
-  link:  /faq/how_are_the_different_head_and_mri_coordinate_systems_defined
 
 - name:  How are the Left and Right Pre-Auricular (LPA and RPA) points defined?
   link:  /faq/how_are_the_lpa_and_rpa_points_defined
