--- a/_data/tag/faq.yml
+++ b/_data/tag/faq.yml
@@ -40,6 +40,9 @@
 - name:  Can I use FieldTrip without MATLAB license?
   link:  /faq/compiled
 
+- name:  How are the different head and MRI coordinate systems defined?
+  link:  /faq/coordsys
+
 - name:  How can I share my MEG data?
   link:  /faq/data_sharing
 
@@ -69,9 +72,6 @@
 
 - name:  How are electrodes, magnetometers or gradiometers described?
   link:  /faq/how_are_electrodes_magnetometers_or_gradiometers_described
-
-- name:  How are the different head and MRI coordinate systems defined?
-  link:  /faq/how_are_the_different_head_and_mri_coordinate_systems_defined
 
 - name:  How are the Left and Right Pre-Auricular (LPA and RPA) points defined?
   link:  /faq/how_are_the_lpa_and_rpa_points_defined
