--- a/_data/tag/mri.yml
+++ b/_data/tag/mri.yml
@@ -23,7 +23,7 @@
   link:  /faq/can_i_restrict_the_source_reconstruction_to_the_grey_matter
 
 - name:  How are the different head and MRI coordinate systems defined?
-  link:  /faq/how_are_the_different_head_and_mri_coordinate_systems_defined
+  link:  /faq/coordsys
 
 - name:  How are the Left and Right Pre-Auricular (LPA and RPA) points defined?
   link:  /faq/how_are_the_lpa_and_rpa_points_defined
