--- a/_data/tag/cuttingeeg2021.yml
+++ b/_data/tag/cuttingeeg2021.yml
@@ -1,3 +1,3 @@
-- name:  FieldTrip tutorial at CuttingEEG 2021 in Marseille
+- name:  FieldTrip tutorial at CuttingEEG 2021 in Aix-en-Provence
   link:  /workshop/cuttingeeg2021
 
