--- a/_data/tag/eeg.yml
+++ b/_data/tag/eeg.yml
@@ -193,7 +193,7 @@
 - name:  Beamforming evoked fields and potentials in combined MEG/EEG data
   link:  /workshop/aarhus/beamformingerf
 
-- name:  FieldTrip tutorial at CuttingEEG 2021 in Marseille
+- name:  FieldTrip tutorial at CuttingEEG 2021 in Aix-en-Provence
   link:  /workshop/cuttingeeg2021
 
 - name:  FieldTrip workshop in Madrid
