--- a/_data/tag/faq.yml
+++ b/_data/tag/faq.yml
@@ -331,6 +331,9 @@
 - name:  How to get started with the MATLAB distributed computing toolbox?
   link:  /faq/how_to_get_started_with_the_matlab_distributed_computing_toolbox
 
+- name:  How to interpret the sign of the phase slope index?
+  link:  /faq/how_to_interpret_the_sign_of_the_phase_slope_index
+
 - name:  How to select the correct SPM toolbox?
   link:  /faq/how_to_select_the_correct_spm_toolbox
 
