--- a/_data/tag/eeg.yml
+++ b/_data/tag/eeg.yml
@@ -199,6 +199,12 @@
 - name:  FieldTrip tutorial at CuttingEEG 2021 in Aix-en-Provence
   link:  /workshop/cuttingeeg2021
 
+- name:  Convert the EEG language dataset for sharing in BIDS
+  link:  /workshop/cuttingeeg2021/bids_language
+
+- name:  Time-frequency analysis on short and long timescales
+  link:  /workshop/cuttingeeg2021/tutorial_freq
+
 - name:  FieldTrip workshop in Madrid
   link:  /workshop/madrid2019
 
