--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email: fieldtriptoolbox@gmail.com
 description: FieldTrip - the toolbox for MEG, EEG and iEEG
 
 baseurl: "/"                                # the subpath of your site, e.g. /blog
-url: "https://www.fieldtriptoolbox.org"      # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://www.fieldtriptoolbox.org"     # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: fieldtriptoolbx
 github_username:  fieldtrip
 
@@ -61,11 +61,24 @@ kramdown:
     default_lang: matlab
 plugins:
   - jekyll-last-modified-at
-  - jekyll-toc          # https://github.com/toshimaru/jekyll-toc
-  - jekyll-sitemap      # https://github.com/jekyll/jekyll-sitemap
+  - jekyll-toc           # https://github.com/toshimaru/jekyll-toc
+  - jekyll-sitemap       # https://github.com/jekyll/jekyll-sitemap
   - jekyll-redirect-from # https://blog.webjeda.com/jekyll-redirect/
 
 exclude:
   - README.md
   - COPYING.md
   - Gemfile*
+# the following section can be commented out to speed up the build process for testing
+#  - assets/img/
+#  - dataformat/
+#  - development/
+#  - example/
+#  - faq/
+#  - getting_started/
+#  - reference/
+#  - template/
+#  - tags/
+#  - tutorial/
+#  - video/
+#  - workshop/
