--- a/_data/tag/ica.yml
+++ b/_data/tag/ica.yml
@@ -5,7 +5,7 @@
   link:  /example/ica_ecg
 
 - name:  Use independent component analysis (ICA) to remove EOG artifacts
-  link:  /example/use_independent_component_analysis_ica_to_remove_eog_artifacts
+  link:  /example/ica_eog
 
 - name:  I used ICA on my MEG data from before 2012 and now FieldTrip crashes, why is that?
   link:  /faq/i_used_ica_on_my_meg_data_from_before_2012_and_now_fieldtrip_crashes_why_is_that
