--- a/_data/tag/preproc.yml
+++ b/_data/tag/preproc.yml
@@ -26,7 +26,7 @@
   link:  /example/ica_ecg
 
 - name:  Use independent component analysis (ICA) to remove EOG artifacts
-  link:  /example/use_independent_component_analysis_ica_to_remove_eog_artifacts
+  link:  /example/ica_eog
 
 - name:  What dataformats are supported?
   link:  /faq/dataformat
