--- a/_data/tag/source.yml
+++ b/_data/tag/source.yml
@@ -1,5 +1,5 @@
 - name:  Align EEG electrode positions to BEM headmodel
-  link:  /example/align_eeg_electrode_positions_to_bem_headmodel
+  link:  /example/electrodes2bem
 
 - name:  Combined EEG and MEG source reconstruction
   link:  /example/combined_eeg_and_meg_source_reconstruction
@@ -23,7 +23,7 @@
   link:  /example/coregistration_quality_control
 
 - name:  Create MNI-aligned grids in individual head-space
-  link:  /example/create_single-subject_grids_in_individual_head_space_that_are_all_aligned_in_mni_space
+  link:  /example/sourcemodel_aligned2mni
 
 - name:  Localizing the sources underlying the difference in event related fields
   link:  /example/difference_erf
