--- a/_data/tag/example.yml
+++ b/_data/tag/example.yml
@@ -2,7 +2,7 @@
   link:  /example
 
 - name:  Align EEG electrode positions to BEM headmodel
-  link:  /example/align_eeg_electrode_positions_to_bem_headmodel
+  link:  /example/electrodes2bem
 
 - name:  Apply non-parametric statistics with clustering on TFRs of power that were computed with BESA
   link:  /example/apply_cluster_and_analysis_on_tfrs_of_power_that_were_computed_with_besa
@@ -80,7 +80,7 @@
   link:  /example/correlation_analysis_in_fmri_data
 
 - name:  Create MNI-aligned grids in individual head-space
-  link:  /example/create_single-subject_grids_in_individual_head_space_that_are_all_aligned_in_mni_space
+  link:  /example/sourcemodel_aligned2mni
 
 - name:  Cross-frequency analysis
   link:  /example/crossfreq
