FIX #495 - use keep_files to prevent clobbering, added missing define for BUNDLE

--- a/_config.yml
+++ b/_config.yml
@@ -82,3 +82,13 @@ exclude:
 #  - tutorial/
 #  - video/
 #  - workshop/
+
+keep_files:
+  - biositemap.rdf
+  - download.php
+  - google88883c5d6c57aca6.html
+  - jquery.layout+d3+dagre+dagre-d3.min.js
+  - pipeline.css
+  - pipeline.js
+  - tree-graph.png
+
