updated formatting for authors in case authtype=CollectiveName

--- a/_data/citedby/5889784.yml
+++ b/_data/citedby/5889784.yml
@@ -17,9 +17,7 @@ authors:
 - authtype: Author
   name: de Munck JC
 - authtype: CollectiveName
-  name: on behalf of the 4DEEG consortiumKwakkelGertGMeskersCarel G. M.CGvan WegenErwin
-    E. H.EEAndringaAukje S.ASHoevenaarsDirkDWintersCarolineCZandvlietSarahSSolis-EscalanteTeodoroTYuan-YangVlaarMartijn
-    P.MPFilatovaLenaLDewaldJulius P. A.JPYaoJunJ
+  name: on behalf of the 4DEEG consortium
 epubdate: 2018 Jan 20
 fulljournalname: Brain Topography
 issue: '3'
