--- a/_data/citedby/6361892.yml
+++ b/_data/citedby/6361892.yml
@@ -17,7 +17,7 @@ authors:
 - authtype: Author
   name: Johnson MH
 - authtype: CollectiveName
-  name: The BASIS teamBaron-CohenS.SBedfordR.RBlasiA.ABoltonP.PChandlerS.SCheungC.CDaviesK.KElsabbaghM.MFernandesJ.JGammerI.IGarwoodH.HGligaT.TGuiraudJ.JHudryK.KLiewM.MLloyd-FoxS.SMarisH.HO’HaraL.LPascoG.GPicklesA.ARibeiroH.HSalomoneE.ETuckerL.LVoleinA.A
+  name: the BASIS team
 epubdate: 2019 Feb 4
 fulljournalname: Translational Psychiatry
 issue: ''
