--- a/_data/tag/literature.yml
+++ b/_data/tag/literature.yml
@@ -1,5 +1,5 @@
-- name:  Literature
-  link:  /literature
+- name:  About the FieldTrip project
+  link:  /about
 
 - name:  References to implemented methods
   link:  /references_to_implemented_methods
