create functional test functions for website examples (#488)
* ENH - markdown2matlab on all examplescripts

* prepended failed_example_

* renamed passing test scripts

* made functions

* shortened filenames + updated links for ica_ecg

* shortened filename + updated links for ica_eog

* ENH - fixed test function to run through fine (on DCCN cluster)

* added redirect

* ENH - some updates, still failing

* ENH - renamed and fixed test function

* ENH - fixed test function and renamed

* ENH - fixed and renamed test function

* ENH - fixed test function and renamed

* ENH - fixed and renamed test function + website typo

* ENH - fixed and renamed some test functions

* update filenames and added redirect links

* ENH - fixed and renamed test functions

* ENH - renamed file

* shortened filenames and added redirect link

* shortened filenames and added redirect links

* renamed previously failing function

* ENH - files renamed

* ENH - renamed and fixed

* ENH - fix and changed filename

* ENH - fixed and filename change

* ENH - fixed and changed filename

* ENH - name change and fix, function does not do anything

* ENH - renamed function, the function does not do anything though

* ENH - added note to example page that is outdated and removed link

* ENH - some updates, still failing

* ENH - fixed and renamed

* ENH - fixed and function rename

* ENH - fixed and renamed function

* ENH  - removed file, because a functioning test script already exists in fieldtrip repo

* ENH - fixed and renamed, download and unzip data on-the-fly

* ENH - fix and name change. Get data via URL directly

* ENH - fixed and changed name

* ENH - removed function that relies on custom code and data

* ENH - removed function, no code, just a redirect

* ENH - fixed and file name change

* ENH - fixed and name change

* shortened some file names + updated links

* ENH - fixed and renamed

* ENH - upd

--- a/_data/tag/artifact.yml
+++ b/_data/tag/artifact.yml
@@ -1,14 +1,14 @@
 - name:  How to incorporate head movements in MEG analysis
-  link:  /example/how_to_incorporate_head_movements_in_meg_analysis
+  link:  /example/headmovement_meg
 
 - name:  Use denoising source separation (DSS) to remove ECG artifacts
   link:  /example/use_denoising_source_separation_dss_to_remove_ecg_artifacts
 
 - name:  Use independent component analysis (ICA) to remove ECG artifacts
-  link:  /example/use_independent_component_analysis_ica_to_remove_ecg_artifacts
+  link:  /example/ica_ecg
 
 - name:  Use independent component analysis (ICA) to remove EOG artifacts
-  link:  /example/use_independent_component_analysis_ica_to_remove_eog_artifacts
+  link:  /example/ica_eog
 
 - name:  How can I consistently represent artifacts in my data?
   link:  /faq/how_can_i_consistently_represent_artifacts_in_my_data
@@ -51,4 +51,3 @@
 
 - name:  Visual artifact rejection
   link:  /tutorial/visual_artifact_rejection
-
