--- a/_data/tag/source.yml
+++ b/_data/tag/source.yml
@@ -1,5 +1,5 @@
 - name:  Align EEG electrode positions to BEM headmodel
-  link:  /example/align_eeg_electrode_positions_to_bem_headmodel
+  link:  /example/electrodes2bem
 
 - name:  Combined EEG and MEG source reconstruction
   link:  /example/combined_eeg_and_meg_source_reconstruction
@@ -23,13 +23,13 @@
   link:  /example/coregistration_quality_control
 
 - name:  Create MNI-aligned grids in individual head-space
-  link:  /example/create_single-subject_grids_in_individual_head_space_that_are_all_aligned_in_mni_space
+  link:  /example/sourcemodel_aligned2mni
 
 - name:  Localizing the sources underlying the difference in event related fields
   link:  /example/difference_erf
 
 - name:  Fit a dipole to the tactile ERF after mechanical stimulation
-  link:  /example/fit_a_dipole_to_the_tactile_erf_after_mechanical_stimulation
+  link:  /example/dipolefit_somatosensory_erf
 
 - name:  How to create a head model if you do not have an individual MRI
   link:  /example/fittemplate
@@ -41,7 +41,7 @@
   link:  /example/make_leadfields_using_different_headmodels
 
 - name:  Plotting the result of source reconstructing on a cortical mesh
-  link:  /example/plotting_the_result_of_source_reconstructing_on_a_cortical_mesh
+  link:  /example/plotting_source_surface
 
 - name:  Source statistics
   link:  /example/source_statistics
