--- a/_data/tag/plotting.yml
+++ b/_data/tag/plotting.yml
@@ -7,7 +7,7 @@
 - name:  Creating a layout for plotting NIRS optodes and channels
   link:  /example/nirs_layout
 
-- name:  Plotting the result of source reconstructing on a cortical mesh
+- name:  Plotting the result of source reconstruction on a cortical mesh
   link:  /example/plotting_source_surface
 
 - name:  Making a synchronous movie of EEG or NIRS combined with video recordings
