--- a/_data/tag/source.yml
+++ b/_data/tag/source.yml
@@ -1,6 +1,3 @@
-- name:  Align EEG electrode positions to BEM headmodel
-  link:  /example/electrodes2bem
-
 - name:  Combined EEG and MEG source reconstruction
   link:  /example/combined_eeg_and_meg_source_reconstruction
 
@@ -22,14 +19,14 @@
 - name:  Check the quality of the anatomical coregistration
   link:  /example/coregistration_quality_control
 
-- name:  Create MNI-aligned grids in individual head-space
-  link:  /example/sourcemodel_aligned2mni
-
 - name:  Localizing the sources underlying the difference in event related fields
   link:  /example/difference_erf
 
 - name:  Fit a dipole to the tactile ERF after mechanical stimulation
   link:  /example/dipolefit_somatosensory_erf
+
+- name:  Align EEG electrode positions to BEM headmodel
+  link:  /example/electrodes2bem
 
 - name:  How to create a head model if you do not have an individual MRI
   link:  /example/fittemplate
@@ -40,11 +37,14 @@
 - name:  Make leadfields using different headmodels
   link:  /example/make_leadfields_using_different_headmodels
 
-- name:  Plotting the result of source reconstructing on a cortical mesh
+- name:  Plotting the result of source reconstruction on a cortical mesh
   link:  /example/plotting_source_surface
 
 - name:  Source statistics
   link:  /example/source_statistics
+
+- name:  Create MNI-aligned grids in individual head-space
+  link:  /example/sourcemodel_aligned2mni
 
 - name:  Testing BEM created EEG lead fields
   link:  /example/testing_bem_created_leadfields
