corrected the author names, these seem not to have been properly retrieved from Pubmed due to Chinese characters

--- a/_data/citedby/8802922.yml
+++ b/_data/citedby/8802922.yml
@@ -7,7 +7,7 @@ articleids:
   value: PMC8802922
 authors:
 - authtype: Unknown
-  name: ''
+  name: 'Zou Cheng T-H'
 - authtype: Author
   name: Creel SC
 - authtype: Author
