--- a/_data/citedby/8802917.yml
+++ b/_data/citedby/8802917.yml
@@ -7,17 +7,17 @@ articleids:
   value: PMC8802917
 authors:
 - authtype: Unknown
-  name: ''
+  name: 'Li J'
 - authtype: Unknown
-  name: ''
+  name: 'Cao D'
 - authtype: Author
   name: Dimakopoulos V
 - authtype: Unknown
-  name: ''
+  name: 'Shi W'
 - authtype: Unknown
-  name: ''
+  name: 'Yu S'
 - authtype: Unknown
-  name: ''
+  name: 'Fan L'
 - authtype: Author
   name: Stieglitz L
 - authtype: Author
@@ -25,7 +25,7 @@ authors:
 - authtype: Author
   name: Sarnthein J
 - authtype: Unknown
-  name: ''
+  name: 'Jiang T'
 epubdate: ''
 fulljournalname: The Journal of Neuroscience
 issue: '3'
