--- a/_data/tag/faq.yml
+++ b/_data/tag/faq.yml
@@ -490,7 +490,7 @@
 - name:  Where can I find the dipoli command-line executable?
   link:  /faq/where_can_i_find_the_dipoli_command-line_executable
 
-- name:  Which version of FieldTrip should I download from the FTP server?
+- name:  Which version of FieldTrip should I download?
   link:  /faq/which_version_of_fieldtrip_should_i_download_from_the_ftp_server
 
 - name:  Why am I not allowed to post to the discussion list?
