--- a/_data/tag/download.yml
+++ b/_data/tag/download.yml
@@ -4,8 +4,8 @@
 - name:  How can I keep track of changes to the code?
   link:  /faq/how_can_i_keep_track_of_the_changes_to_the_code
 
-- name:  I am having problems downloading from the FTP server
-  link:  /faq/i_am_having_problems_downloading_from_the_ftp_server
+- name:  I am having problems downloading
+  link:  /faq/i_am_having_problems_downloading
 
 - name:  I am working at the Donders, should I also download FieldTrip?
   link:  /faq/i_am_working_at_the_donders_should_i_also_download_fieldtrip
