--- a/_data/tag/faq.yml
+++ b/_data/tag/faq.yml
@@ -337,8 +337,8 @@
 - name:  I am getting strange artifacts in figures that use opacity
   link:  /faq/i_am_getting_strange_artifacts_in_figures_that_use_opacity
 
-- name:  I am having problems downloading from the FTP server
-  link:  /faq/i_am_having_problems_downloading_from_the_ftp_server
+- name:  I am having problems downloading
+  link:  /faq/i_am_having_problems_downloading
 
 - name:  I am having problems printing figures that use opacity
   link:  /faq/i_am_having_problems_printing_figures_that_use_opacity
