--- a/_data/tag/preprocessing.yml
+++ b/_data/tag/preprocessing.yml
@@ -76,6 +76,9 @@
 - name:  Reading is slow, can I write my raw data to a more efficient file format?
   link:  /faq/reading_is_slow_can_i_write_my_raw_data_to_a_more_efficient_file_format
 
+- name:  Do I need to resample my data, and if so, how is this to be done?
+  link:  /faq/resampling_lowpassfilter
+
 - name:  How can I check or decipher the sequence of triggers in my data?
   link:  /faq/triggers
 
