--- a/_data/tag/plotting.yml
+++ b/_data/tag/plotting.yml
@@ -13,6 +13,9 @@
 - name:  Making a synchronous movie of EEG or NIRS combined with video recordings
   link:  /example/video_eeg
 
+- name:  Which colormaps are supported?
+  link:  /faq/colormap
+
 - name:  How can I define neighbouring sensors?
   link:  /faq/how_can_i_define_neighbouring_sensors
 
